fix: Only show x-axis scrollbar when neccessary.
Hides scrollbar on desktop devices while maintaining its presence on mobile devices.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,7 +6,7 @@ $content-width:    1050px !default;
 @import "minima";
 
 .post-content {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 table tr:nth-child(3n+1) {
